# url-shortener-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: db.py  main.py
app/api/: analytics.py  redirect.py  shorten.py
app/models/: urls.py
app/schemas/: urls.py
app/tests/: test_shorten.py
docker/: Dockerfile.dev  docker-compose.dev.yml
